# photoloop

./: .env.example  README.md  docker-compose.yml  instructions.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_video_fields.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  album.py  base.py  photo.py  project.py  user.py
backend/app/routers/: albums.py  auth.py  metadata.py  photos.py  projects.py  setup.py
backend/app/schemas/: album.py  auth.py  photo.py  project.py
backend/app/services/: exif.py  scanner.py  thumbnailer.py
backend/app/tasks/: celery_app.py
backend/tests/: conftest.py  test_albums.py  test_auth.py  test_metadata.py  test_photos.py  test_projects.py  test_scanner.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[slug]/: page.tsx
frontend/src/app/projects/[slug]/albums/: page.tsx
frontend/src/app/projects/[slug]/albums/[albumId]/: page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/components/: Lightbox.tsx
frontend/src/lib/: api.ts
nginx/: nginx.conf
